content-block.css: fixed first-child content block. added h1 styles. article.css: fixed article title line-height. dictionary.css: added text-nowrap.

--- a/src/css/content-block.css
+++ b/src/css/content-block.css
@@ -21,7 +21,7 @@
         --gap-figure-top: var(--gap-bigger);
     }
 
-    & > :first-child {
+    &:first-child > :first-child {
         @apply mt-0;
     }
 
@@ -43,6 +43,14 @@
 
     p, ul, ol {
         margin-top: var(--gap-small);
+        margin-bottom: var(--gap-normal);
+    }
+
+    h1 {
+        @apply text-3xl md:text-4xl;
+        @apply font-serif font-bold leading-[115%] -tracking-[0.075rem];
+
+        margin-top: var(--gap-bigger);
         margin-bottom: var(--gap-normal);
     }
 
